conglomerate (0.7.10-2) UNRELEASED; urgency=low

  * expecting new upstream version

  * patches/dont_install_generated_gtkdoc.dpatch
  The patch is updated for better disabling of gtkdoc.

 -- Geert Stappers <stappers@stappers.nl>  Thu,  8 Jan 2004 21:12:22 +0100

conglomerate (0.7.10-1) unstable; urgency=low

  * new upstream version

  * better disabling of gtkdoc
   - manual patched doc/reference/Makefile.in
   - temporary disabled patches/dont_install_generated_gtkdoc.dpatch
  * expecting new upstream version

 -- Geert Stappers <stappers@stappers.nl>  Thu,  8 Jan 2004 21:12:05 +0100

conglomerate (0.7.9-1) UNRELEASED; urgency=low

  * new upstream version

  * Installing gconf schema
   - control: depend on gconf2
   - rules: configure with sysconfdir=/etc
   - rules: GCONF_DISABLE_MAKEFILE_SCHEMA_INSTALL=yes added
     before `make install`
   - conglomerate.postinst: new file
   - conglomerate.prerm: new file

 -- Geert Stappers <stappers@stappers.nl>  Mon,  5 Jan 2004 23:30:43 +0100

conglomerate (0.7.8-1) unstable; urgency=low

  * New upstream release.

 -- Geert Stappers <stappers@stappers.nl>  Thu, 18 Dec 2003 08:48:00 +0000

conglomerate (0.7.7-1) unstable; urgency=low

  * New upstream release.
   - included FAQ in the gnome help file. (closes: #218589)

  * dpatch compliant.

  * patches/package_version.dpatch:
  New file. Shows Debian packages version inside the program.

  * rules:
   - Upstream has an up-to-date config.guess and config.sub.
   - Removed 'INSTALL_PROGRAM += -s' with test on DEB_BUILD_OPTIONS,
     because `dh_strip` takes care of that.
   Suggested by Joerg Jaspert, thanks.

  * NEWS:
   - Dropped the scrollkeeper item.
   Suggested by Joerg Jaspert, thanks.
   - In same format as changelog.
   Suggested by Martin Michlmayr, thanks.
   - Clearified the gtk-doc issue.

 -- Geert Stappers <stappers@stappers.nl>  Thu, 11 Dec 2003 14:29:17 +0100

conglomerate (0.7.6-1) unstable; urgency=medium

  * New upstream release.