@@ -17,3 +17,15 @@ Description: userfriendly XML editor
  It aims to hide the complexity and jargon of XML behind a friendly GUI.
  .
  Homepage: http://www.conglomerate.org
+
+Package: conglomerate-dbg
+Architecture: any
+Depends: gconf2, ${shlibs:Depends}, ${misc:Depends}
+Recommends: xml-core
+Suggests: docbook-xml, docbook-xsl
+Description: userfriendly XML editor, with debug symbols
+ Conglomerate is a free, as in GPL, userfriendly XML-file editor,
+ for DocBook and other document types.
+ It aims to hide the complexity and jargon of XML behind a friendly GUI.
+ .
+ Homepage: http://www.conglomerate.org
